test/errors/fill1.input.asm

* = $801

    lda #0
!fill "foo", 0
